# cmake-test

./: .gitignore  README.md  evaluate-my.py  evaluate.py  export.py  readme-eat-seq.md  readme.md
CxxApp00/: settings.gradle
CxxApp00/app/: build.gradle
CxxApp00/app/src/androidTest/java/com/clumba/cxxapp00/: ExampleInstrumentedTest.java
CxxApp00/app/src/main/: AndroidManifest.xml
CxxApp00/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CxxApp00/app/src/main/java/com/clumba/cxxapp00/: MainActivity.java
CxxApp00/app/src/main/res/values/: strings.xml  themes.xml
CxxApp00/app/src/main/res/values-night/: themes.xml
CxxApp00/app/src/test/java/com/clumba/cxxapp00/: ExampleUnitTest.java
CxxApp00/gradle/wrapper/: gradle-wrapper.properties
CxxApp01_UseLibtorch/: settings.gradle
CxxApp01_UseLibtorch/app/: build.gradle
CxxApp01_UseLibtorch/app/src/androidTest/java/com/clumba/cxxapp01/: ExampleInstrumentedTest.java
CxxApp01_UseLibtorch/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
CxxApp01_UseLibtorch/app/src/main/java/com/clumba/cxxapp01/: MainActivity.java
CxxApp01_UseLibtorch/app/src/main/res/values/: strings.xml  themes.xml
CxxApp01_UseLibtorch/app/src/main/res/values-night/: themes.xml
CxxApp01_UseLibtorch/app/src/test/java/com/clumba/cxxapp01/: ExampleUnitTest.java
CxxApp01_UseLibtorch/gradle/wrapper/: gradle-wrapper.properties
CxxApp02_Ner/app/src/main/: AndroidManifest.xml
CxxApp02_Ner/app/src/main/cpp/: CMakeLists.txt  Ner.cpp  Ner.h
CxxApp02_Ner/app/src/main/java/com/clumba/cxxapp01/: MainActivity.java  Ner.java
_10_cmake-pypt-so/: CMakeLists.txt
_11_java_invoke_c++/: App.java  NER.cpp  NER.h  NER.java  readme.md
_11_java_invoke_c++_ner/: CMakeLists.txt  NER.cpp  NER.h  example-app.cpp
_11_java_invoke_c++_ner/java/: NER.h  NER.java
_1_cmake-test/: CMakeLists.txt  main.cc
_2_cmake-debug-test/: CMakeLists.txt  main  main.cpp
_3_cmake-lib-test/: CMakeLists.txt  hello.cpp
_3_cmake-lib-test/used-lib-so/: CMakeLists.txt  hello.h  useLibMain.cpp
_4_cmake-used-lib-so/: CMakeLists.txt
_4_cmake-used-lib-so/only-use/: CMakeLists.txt
_5_cmake-only-use-so/: useLibMain.cpp
_6_cmake-use-libtorch/: readme.md
_6_cmake-use-libtorch/find-in-cmake/: CMakeLists.txt
_6_cmake-use-libtorch/find-in-cmake-cmd/: make.sh
_7_gcc-libtorch/: a.out  main.cpp
_8_cmake-libtorch-pypt/: example-app.cpp
_8_cmake-libtorch-pypt/pt/: export-script.pt
_9_cmake-add_subdirectoy/: CMakeLists.txt  example-app.cpp
_9_cmake-add_subdirectoy/sub1/: CMakeLists.txt
_9_cmake-libtorch-pypt-class/: ner.cpp  ner.h
cmake-libtorch-pypt/: CMakeLists.txt  example-app.cpp
cmake-libtorch-pypt-class/: CMakeLists.txt
cmake-pypt-so/: main.cpp
experiments/base_model/: best.pth.tar  metrics_test_best.json
export/: export-trace.pt
